# IsaacPorter

./: .gitignore  CMakeLists.txt  CMakePresets.json  IsaacSave.h  README.md  save_switcher.sln  vcpkg.json
.github/workflows/: windows-build.yaml
cli/: cli.cpp
imgui/: generate_unifont.py  gui.cpp  gui.h  lang.cpp  lang.h  main.cpp  version.h
imgui/langs/: en.inl  zh.inl
save_switcher/: main.cpp  save_switcher.vcxproj
test/: test.cpp
